--- a/app/views/initiatives/_form.html.erb
+++ b/app/views/initiatives/_form.html.erb
@@ -43,7 +43,7 @@
           <h3 class="pl-10 text-sm font-semibold text-zinc-950 dark:text-white text-right">Subsystem Tags</h3>
           <p class="mt-1 text-sm/6 text-gray-600 dark:text-gray-400 text-right">Identify relevant subsystem tags for this initiative.</p>
         </div>
-        <%= render 'initiatives_subsystem_tags/controls', form: %>
+        <%= render 'initiatives_subsystem_tags/controls', initiative: %>
       </div>
 
       <div class="grid grid-cols-1 gap-x-8 gap-y-10 border-b border-gray-900/10 dark:border-white/10 pb-12 md:grid-cols-3">
