--- a/app/views/initiatives_subsystem_tags/_controls.html.erb
+++ b/app/views/initiatives_subsystem_tags/_controls.html.erb
@@ -2,24 +2,22 @@
   <%= render 'initiatives_subsystem_tags/subsystem_tag_fields' %>
   <div class="sm:col-span-6" data-initiatives-subsystem-tags-target="initiativesSubsystemTags">
   <%= turbo_frame_tag :subsystem_tags do %>
-      <%= form.fields_for :initiatives_subsystem_tags do |initiatives_subsystem_tags_form| %>
-      <div class="flex items-center space-x-4 mt-3 subsystem-tag">
-          <%= 
-            initiatives_subsystem_tags_form.collection_select(
-              :subsystem_tag_id, 
-              policy_scope(SubsystemTag), 
-              :id, 
-              :name, 
-              { include_blank: 'Select a subsystem tag' }
-            ) 
-          %>
-          <%= link_to 'Remove', '#', class: 'text-red-500', data: { action: 'initiatives-subsystem-tags#removeTag' } %>
+    <% initiative.initiatives_subsystem_tags.each_with_index do |initiatives_subsystem_tag, index| %>
+      <div class="flex items-center space-x-4 mt-2 subsystem-tag">
+        <%=
+          custom_select_tag(
+            "initiative[initiatives_subsystem_tags_attributes][#{index}][subsystem_tag_id]",
+            options_from_collection_for_select(policy_scope(SubsystemTag), :id, :name, initiatives_subsystem_tag.subsystem_tag_id),
+            include_blank: 'Select a subsystem tag'
+          )
+        %>
+        <%= link_to 'Remove', '#', class: 'text-red-500', data: { action: 'initiatives-subsystem-tags#removeTag' } %>
       </div>
-      <% end %>
+    <% end %>
   <% end %>
   </div>
 
   <div class="sm:col-span-6 mt-2">
-  <%= render 'initiatives_subsystem_tags/index' %>
+    <%= render 'initiatives_subsystem_tags/index' %>
   </div>
 </div>
