1073 added additional minor fixes

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -28,7 +28,7 @@
       </div>
     </div>
   </div>
-  <hr role="presentation" class="my-10 mt-6 w-full border-t border-zinc-950/10 dark:border-white/10">
+  <%= horizontal_rule(class: 'my-10 mt-6') %>
   <%= render 'show_page_section', title: 'Overview' do %>
     <%= definition_list_element('Description', @account.description) %>
   <% end %>
