--- a/app/views/application/_form_header.html.erb
+++ b/app/views/application/_form_header.html.erb
@@ -5,4 +5,4 @@
     <%= record.persisted? ? "Edit #{record.name.presence || record.model_name.human }" : "New #{record.model_name.human}" %>
   <% end %>
 </h1>
-<hr role="presentation" class="my-10 mt-6 w-full border-t border-zinc-950/10 dark:border-white/10">
+<%= horizontal_rule(class: 'my-10 mt-6')  %>
