--- a/app/views/initiatives/show.html.erb
+++ b/app/views/initiatives/show.html.erb
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <hr role="presentation" class="my-10 mt-6 w-full border-t border-zinc-950/10 dark:border-white/10">
+  <%= horizontal_rule(class: 'my-10 mt-6') %>
 
   <%= render 'show_page_section', title: 'Contact Details' do %>
     <%= definition_list_element('Contact position', @initiative.contact_position) %>
