--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -11,8 +11,8 @@
         <p class="text-gray-700 dark:text-gray-100 mb-4"><%= description %></p>
         <%= yield %>
       </div>
-      <div class="bg-gray-100 dark:bg-zinc-950 px-4 py-2 mt-auto flex justify-end">
-        <%= f.submit 'Submit', class: 'bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2' %>
+      <div class="py-2 mt-auto flex justify-end">
+        <%= f.submit 'Download', class: 'bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2' %>
       </div>
     <% end %>
   </div>
