--- a/app/views/dashboard/_card.html.erb
+++ b/app/views/dashboard/_card.html.erb
@@ -1,9 +1,6 @@
 <div>
   <%= link_to link do %>
-    <hr
-      role="presentation"
-      class="w-full border-t border-2 <%= border_color %>"
-    />
+    <%= horizontal_rule(class: "border-2 #{border_color}") %>
     <div class="mt-6 text-lg/6 font-medium sm:text-sm/6"><%= title %></div>
     <div class="mt-3 text-3xl/8 font-semibold sm:text-2xl/8"><%= count %></div>
     <div class="mt-3 text-sm/6 sm:text-xs/6">
