--- a/app/views/initiatives/_initiative.html.erb
+++ b/app/views/initiatives/_initiative.html.erb
@@ -1,8 +1,5 @@
 <li>
-  <hr
-    role="presentation"
-    class="w-full border-t border-zinc-950/10 dark:border-white/10"
-  />
+  <%= horizontal_rule %>
   <div class="flex items-center justify-between">
     <div class="flex gap-6 py-6">
       <%= render partial: 'resource_summary', locals: { name: initiative.name, background_color: 'bg-sky-600' } %>
