--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -29,7 +29,7 @@
       </div>
     </div>
   </div>
-  <hr role="presentation" class="my-10 mt-6 w-full border-t border-zinc-950/10 dark:border-white/10">
+  <%= horizontal_rule(class: 'my-10 mt-6') %>
 
   <%= render 'show_page_section', title: 'Contact Details' do %>
     <%= definition_list_element('Weblink', link_to_external_url(@organisation.weblink)) %>
