--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -42,7 +42,15 @@
             <div class="sm:col-span-4">
               <%= form.label :system_role %>
               <div class="mt-2">
-                <%= form.select :system_role, options_for_select(User.system_roles.keys.map { |key| [key.capitalize, key]}, User.system_roles.keys.first) %>
+                <%=
+                  form.select(
+                    :system_role, 
+                    options_for_select(
+                      User.system_roles.keys.map { |key| [key.capitalize, key]}, 
+                      user.system_role
+                    )
+                  ) 
+                %>
               </div>
             </div>
           <%- end %>
@@ -50,7 +58,15 @@
           <div class="sm:col-span-4">
             <%= form.label :account_role %>
             <div class="mt-2">
-              <%= form.select :account_role, options_for_select(AccountsUser.account_roles.keys.map { |key| [key.capitalize, key]}, AccountsUser.account_roles.keys.first) %>
+              <%= 
+                form.select(
+                  :account_role, 
+                  options_for_select(
+                    AccountsUser.account_roles.keys.map { |key| [key.capitalize, key]}, 
+                    role_in_current_account(user)
+                  )
+                ) 
+              %>
             </div>
           </div>
         <% end %>
