--- a/app/views/initiatives_organisations/_form.html.erb
+++ b/app/views/initiatives_organisations/_form.html.erb
@@ -1,7 +1,15 @@
-<div data-controller="initiatives-organisations-form">
-  <%= form_with(model: @organisation, url: initiatives_organisations_path, html: { class: 'form-horizontal record-form border-b border-zinc-950/10 dark:border-white/10 pb-5' }) do |form| %>
+<div 
+  data-controller="initiatives-organisations-form" 
+  data-initiatives-organisations-form-organisations-value="<%= current_account.organisations.pluck(:name).to_json %>"
+>
+  <%= 
+    form_with(
+      model: @organisation, 
+      url: initiatives_organisations_path, 
+      html: { class: 'form-horizontal record-form border-b border-zinc-950/10 dark:border-white/10 pb-5' }
+    ) do |form| 
+  %>
     <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white">New Stakeholder</h1>
-
     <div class="flex space-x-2">
       <div class="flex-1">
         <%= form.label :name, class: 'block text-xs font-medium text-gray-700' %>
@@ -18,6 +26,7 @@
         
           )
         %>
+        <div class="text-red-500 text-xs mt-1" data-initiatives-organisations-form-target="nameError"></div>
       </div>
 
       <div class="flex-1">
