1098 fixed selected colours, removed activity tab

--- a/app/views/application/_graph_dialog.html.erb
+++ b/app/views/application/_graph_dialog.html.erb
@@ -1,8 +1,8 @@
 <div id="dialog-wrapper" class="print:hidden">
   <dialog id="dialog" data-<%= data_controller %>-target="dialog" class="[&_a]:text-blue-500 max-w-lg rounded-md bg-white dark:bg-black px-4 pb-4 pt-5 text-left shadow-xl text-black dark:text-white">
     <div class="flex justify-between">
-      <div class="flex items-center space-x-2">
-        <div class="h-4 w-4 rounded-full" data-<%= data_controller %>-target="dialogTitleColor"></div>
+      <div class="flex items-start space-x-2">
+        <div class="mt-1 h-4 w-4 rounded-full" data-<%= data_controller %>-target="dialogTitleColor"></div>
         <h2 class="text-lg font-semibold text-zinc-950 text-black dark:text-white" data-<%= data_controller %>-target="dialogTitle"></h2>
       </div>
       <h2 class="text-lg font-semibold text-zinc-950 dark:text-black pl-2" data-<%= data_controller %>-target="dialogTitle"></h2>
