1102 reintroduced classic colors

--- a/app/views/shared/show.html.erb
+++ b/app/views/shared/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'impact_cards/classic_stylesheet', impact_card: @scorecard, focus_areas: @focus_areas %>
 <div class="mx-auto max-w-6xl">
   <%= render 'shared/summary', impact_card: @scorecard, print_description: true %>
   <%= render 'shared/tabs', impact_card: @scorecard %>
