--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
       <div class="mx-auto max-w-7xl px-6 pb-24 pt-10 sm:pb-40 lg:flex lg:px-8 lg:pt-40">
         <div class="mx-auto max-w-2xl flex-shrink-0 lg:mx-0 lg:max-w-xl lg:pt-8">
           <%= image_tag 'logo-small.png', class: 'h-16 w-auto', alt: "Logo for the 'Tool for Systemic Change'" %>
-          <div class="mt-24 sm:mt-32 lg:mt-16">
+          <%# <div class="mt-24 sm:mt-32 lg:mt-16">
             <a href="#" class="inline-flex space-x-6">
               <span class="rounded-full bg-yellow-500/10 px-3 py-1 text-sm font-semibold leading-6 text-yellow-400 ring-1 ring-inset ring-yellow-500/20">Latest updates</span>
               <span class="inline-flex items-center space-x-2 text-sm font-medium leading-6 text-gray-300">
@@ -18,7 +18,7 @@
                 </svg>
               </span>
             </a>
-          </div>
+          </div> %>
           <h1 class="mt-10 text-4xl font-bold tracking-tight text-white sm:text-6xl">Obsekio</h1>
           <h2 class="mt-10 text-3xl font-bold tracking-tight text-white sm:text-4xl">The Tool for Systemic Change</h2>
           <p class="mt-6 text-lg leading-8 text-gray-300">Tackle society's toughest challenges with Obsekio, the Tool for Systemic Change. Create lasting solutions through holistic thinking and collaboration.</p>
@@ -123,9 +123,10 @@ Tool for Systemic Change</p>
       </div>
       <div class="relative overflow-hidden pt-16">
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
-          <img src="https://tailwindui.com/img/component-images/dark-project-app-screenshot.png" alt="App screenshot" class="mb-[-12%] rounded-xl shadow-2xl ring-1 ring-white/10" width="2432" height="1442">
+           <%= image_tag 'graph.png', class: "rounded-xl shadow-2xl ring-1 ring-white/10", title: 'App screenshot' %>
+          <%# <img src="graph.png" alt="App screenshot" class="mb-[-12%] rounded-xl shadow-2xl ring-1 ring-white/10" width="2432" height="1442"> %>
           <div class="relative" aria-hidden="true">
-            <div class="absolute -inset-x-20 bottom-0 bg-gradient-to-t from-gray-900 pt-[7%]"></div>
+            <div class="absolute -inset-x-20 bottom-0 bg-gradient-to-t from-gray-600 pt-[7%]"></div>
           </div>
         </div>
       </div>
@@ -268,18 +269,18 @@ Tool for Systemic Change</p>
               <path d="M13.6823 10.6218L20.2391 3H18.6854L12.9921 9.61788L8.44486 3H3.2002L10.0765 13.0074L3.2002 21H4.75404L10.7663 14.0113L15.5685 21H20.8131L13.6819 10.6218H13.6823ZM11.5541 13.0956L10.8574 12.0991L5.31391 4.16971H7.70053L12.1742 10.5689L12.8709 11.5655L18.6861 19.8835H16.2995L11.5541 13.096V13.0956Z" />
             </svg>
           </a>
-          <a href="#" class="text-gray-500 hover:text-gray-400">
+          <a href="https://github.com/EventideSystems" target="_blank" class="text-gray-500 hover:text-gray-400">
             <span class="sr-only">GitHub</span>
             <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
               <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" />
             </svg>
           </a>
-          <a href="#" class="text-gray-500 hover:text-gray-400">
+          <%# <a href="#" class="text-gray-500 hover:text-gray-400">
             <span class="sr-only">YouTube</span>
             <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
               <path fill-rule="evenodd" d="M19.812 5.418c.861.23 1.538.907 1.768 1.768C21.998 8.746 22 12 22 12s0 3.255-.418 4.814a2.504 2.504 0 0 1-1.768 1.768c-1.56.419-7.814.419-7.814.419s-6.255 0-7.814-.419a2.505 2.505 0 0 1-1.768-1.768C2 15.255 2 12 2 12s0-3.255.417-4.814a2.507 2.507 0 0 1 1.768-1.768C5.744 5 11.998 5 11.998 5s6.255 0 7.814.418ZM15.194 12 10 15V9l5.194 3Z" clip-rule="evenodd" />
             </svg>
-          </a>
+          </a> %>
         </div>
         <p class="mt-8 text-xs leading-5 text-gray-100 md:order-1 md:mt-0">&copy; 2024 Eventide Systems Pty Ltd. All rights reserved.</p>
       </div>
