--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -11,50 +11,9 @@
           <%= highlight(user.email, params.dig(:q, :name_or_email_cont)) %>
         </div>
         <%= role_in_current_account_badge(user) %>
+        <%= user_system_role_badge(user) %>
+        <%= user_status_badge(user) %>
       </div>
-    </div>
-
-    <div class="flex items-center gap-4">
-      <%= render_dropdown_menu do %>
-        <%= dropdown_menu_trigger do %>
-          <span class="text-zinc-900 dark:text-white">
-            <%= render_icon :more %>
-          </span>
-        <% end %>
-
-        <%= dropdown_menu_content do %>
-          <%=
-            dropdown_menu_item do
-              link_to "Modify", edit_user_path(user), class: "block w-full text-sm", data: { turbo: false }
-            end
-          %>
-
-          <%# TODO: Convert this to a general test for whether the current user can impersonate in general %>
-          <%- if policy(user).impersonate? %>
-            <%=
-              dropdown_menu_item do
-                button_to "Impersonate", impersonate_user_path(user), class: "block w-full text-sm", data: { turbo: false }
-              end
-            %>
-          <%- end %>
-
-          <%- if user.status == 'deleted' && policy(user).undelete? %>
-            <%=
-              dropdown_menu_item do
-                button_to "Undelete", undelete_user_path(user), class: "block w-full text-sm", data: { turbo: false }
-              end
-            %>
-          <%- end %>
-
-          <%- if user.status == 'invitation-pending' && policy(user).resend_invitation? %>
-            <%=
-              dropdown_menu_item do
-                link_to "Resend invitation", resend_invitation_user_path(user), class: "block w-full text-sm", data: { turbo: false }
-              end
-            %>
-          <%- end %>
-        <% end %>
-      <% end %>
     </div>
   </div>
 </li>
