1120 added new tab for sharing

--- a/app/views/impact_cards/_tabs.html.erb
+++ b/app/views/impact_cards/_tabs.html.erb
@@ -7,7 +7,6 @@
         <%- if impact_card.is_a?(SustainableDevelopmentGoalAlignmentCard) %>
           <option>Thematic Map</option>
         <%- end %>
-        <option>Activity</option>
       </select>
       <svg class="pointer-events-none col-start-1 row-start-1 mr-2 size-5 self-center justify-self-end fill-gray-500" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true" data-slot="icon">
         <path fill-rule="evenodd" d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
@@ -21,6 +20,7 @@
         <%- if impact_card.is_a?(SustainableDevelopmentGoalAlignmentCard) %>
           <%= render_tab_item title: "Thematic Map", path: impact_card_thematic_map_index_path(impact_card), active_tab: :thematic_map %>
         <%- end %>
+        <%= render_tab_item title: "Sharing", path: impact_card_sharing_index_path(impact_card), active_tab: :sharing %>
       </nav>
     </div>
   </div>
