--- a/app/views/impact_cards/edit.html.erb
+++ b/app/views/impact_cards/edit.html.erb
@@ -28,8 +28,8 @@
     <% end %>
   <% end %>
 
-  <div class="mx-auto max-w-4xl pt-24">
-    <%= render 'sharing', impact_card: @scorecard %>
+  <div class="mx-auto max-w-4xl pt-10">
+    <%#= render 'sharing', impact_card: @scorecard %>
     <%= render 'danger_zone', impact_card: @scorecard %>
   </div>
 </div>
