--- a/app/views/organisations/_form.html.erb
+++ b/app/views/organisations/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto max-w-6xl">
-  <%= form_for(organisation, html: { role: 'form' }) do |form| %>
+  <%= form_for(organisation, html: { role: 'form' }, data: { turbo: false }) do |form| %>
     <%= render 'form_header', record: organisation %>
     <%= render 'form_body' do %>
       <%= render 'section', first_section: true do %>
