--- a/app/views/impact_cards/_danger_zone.html.erb
+++ b/app/views/impact_cards/_danger_zone.html.erb
@@ -1,44 +1,45 @@
-<%= render 'section' do %>
-  <%= render 'section_header', title: 'Danger Zone' %>
-  <%= render 'section_body', class: 'border border-rose-500 rounded-lg gap-y-0' do %>
-    <div class="sm:col-span-6 border-b border-gray-900 p-4">
-      <%= custom_label_tag 'Delete this impact card' %>
-      <div class="mt-2">
-        <p class="text-sm/6 text-gray-600 dark:text-gray-400">This action cannot be undone. This will permanently delete the impact card and all associated data.</p>
-        <div class="flex justify-end">
-          <%=
-            button_to(
-              "Delete Card",
-              impact_card_path(impact_card),
-              method: :delete,
-              form: {
-                data: {
-                  turbo: false,
-                  controller: "confirmation",
-                  action: 'submit->confirmation#confirm',
-                  confirmation_message_value: 'Are you sure you want to delete this impact card?'
-                }
-              },
+<div class="mx-auto max-w-4xl pt-10">
+  <%= render 'section' do %>
+    <%= render 'section_header', title: 'Danger Zone' %>
+    <%= render 'section_body', class: 'border border-rose-500 rounded-lg gap-y-0' do %>
+      <div class="sm:col-span-6 border-b border-gray-900 p-4">
+        <%= custom_label_tag 'Delete this impact card' %>
+        <div class="mt-2">
+          <p class="text-sm/6 text-gray-600 dark:text-gray-400">This action cannot be undone. This will permanently delete the impact card and all associated data.</p>
+          <div class="flex justify-end">
+            <%=
+              button_to(
+                "Delete Card",
+                impact_card_path(impact_card),
+                method: :delete,
+                form: {
+                  data: {
+                    turbo: false,
+                    controller: "confirmation",
+                    action: 'submit->confirmation#confirm',
+                    confirmation_message_value: 'Are you sure you want to delete this impact card?'
+                  }
+                },
+                class: TailwindClasses::DANGER_ZONE_BUTTON_CLASS
+              )
+            %>
+          </div>
+        </div>
+      </div>
+
+      <div class="sm:col-span-6 p-4">
+        <%= custom_label_tag 'Merge impact cards' %>
+        <div class="mt-2">
+          <p class="text-sm/6 text-gray-600 dark:text-gray-400">Merge another impact card and all its associated data into this card.</p>
+          <div class="flex justify-end">
+            <%=
+              link_to 'Merge Cards',
+              new_impact_card_merge_path(impact_card),
               class: TailwindClasses::DANGER_ZONE_BUTTON_CLASS
-            )
-          %>
+            %>
+          </div>
         </div>
       </div>
-    </div>
-
-    <div class="sm:col-span-6 p-4">
-      <%= custom_label_tag 'Merge impact cards' %>
-      <div class="mt-2">
-        <p class="text-sm/6 text-gray-600 dark:text-gray-400">Merge another impact card and all its associated data into this card.</p>
-        <div class="flex justify-end">
-          <%=
-            link_to 'Merge Cards',
-            new_impact_card_merge_path(impact_card),
-            class: TailwindClasses::DANGER_ZONE_BUTTON_CLASS
-          %>
-        </div>
-      </div>
-
-    </div>
+    <% end %>
   <% end %>
-<% end %>
+</div>
