1123 restricted access to account members

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -11,6 +11,11 @@
           <%= highlight(account.description, params.dig(:q, :name_or_description_cont)) %>
         </div>
         <div class="text-xs/6 text-zinc-600">
+          <%- if account.expired? %>
+            <div class="inline-flex rounded-lg items-center justify-center bg-red-600 dark:bg-red-600 text-white" title="Expired">
+              <p class="py-1 px-2 text-xs whitespace-nowrap">Expired</p>
+            </div>
+          <%- end %>
           <%= max_users(account) %>; <%= max_impact_cards(account) %>; <%= expires_on(account) %>
         </div>
       </div>
