--- a/app/views/labels/_label.html.erb
+++ b/app/views/labels/_label.html.erb
@@ -15,13 +15,20 @@
         </div>
       </div>
 
-      <div class="flex items-center gap-4 ml-auto">
+      <div class="flex items-center gap-4 ml-auto">        
         <% if label.is_a?(StakeholderType) && label.organisations.present? %>
-          <span class="text-black dark:text-gray-500 whitespace-nowrap">In Use</span>
+          <%- if policy(label).edit? %>
+            <span class="text-black dark:text-gray-500 whitespace-nowrap">In Use</span>
+          <%- end %>
         <% else %>
-          <%= link_to "Delete", polymorphic_path([:labels, label]), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"},  class: "text-sm text-red-500 hover:underline" %>
+          <%- if policy(label).destroy? %>
+            <%= link_to "Delete", polymorphic_path([:labels, label]), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"},  class: "text-sm text-red-500 hover:underline" %>
+          <%- end %>
         <% end %>
-        <%= link_to_primary "Edit", edit_polymorphic_path([:labels, label]) %>
+  
+        <%- if policy(label).edit? %>
+          <%= link_to_primary "Edit", edit_polymorphic_path([:labels, label]) %>
+        <%- end %>
       </div>
     </div>
   <% end %>
