--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,8 +54,10 @@
               %>
             <%- end %>
 
-            <% edit_title = @user == current_user ? 'Edit Profile' : 'Edit Team Member' %>
-            <%= link_to_primary edit_title, edit_user_path(@user), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+            <%- if policy(@user).edit? %>
+              <% edit_title = @user == current_user ? 'Edit Profile' : 'Edit Team Member' %>
+              <%= link_to_primary edit_title, edit_user_path(@user), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+            <%- end %>
           </div>
         </div>
       </div>
