--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -4,9 +4,11 @@
       <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white">Accounts</h1>
       <div class="flex justify-between items-center mt-4 ">
         <%= render partial: 'search_form', locals: { record: @q, placeholder: 'Search accounts...' } %>
-        <div>
-          <%= link_to_primary 'Create Account', new_account_path %>
-        </div>
+        <%- if policy(Account).create? %>
+          <div>
+            <%= link_to_primary 'Create Account', new_account_path %>
+          </div>
+        <%- end %>
       </div>
     </div>
     <ul class="w-full divide-y divide-gray-200 dark:divide-gray-700">
