--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -22,7 +22,9 @@
               <%= link_to_primary 'Switch To', switch_account_path(@account), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
             <% end %>
 
-            <%= link_to_primary 'Edit Account', edit_account_path(@account), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+            <%- if policy(@account).edit? %>
+              <%= link_to_primary 'Edit Account', edit_account_path(@account), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+            <%- end %>
           </div>
         </div>
       </div>
