--- a/app/views/impact_cards/index.html.erb
+++ b/app/views/impact_cards/index.html.erb
@@ -6,9 +6,11 @@
       <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white">Impact Cards</h1>
       <div class="flex justify-between items-center mt-4">
         <%= render partial: 'search_form', locals: { record: @q, placeholder: 'Search impact cards...', options: { url: impact_cards_path } } %>
-        <div>
-          <%= link_to_primary 'Create Impact Card', new_impact_card_path %>
-        </div>
+        <%- if policy(Scorecard).create? %>
+          <div>
+            <%= link_to_primary 'Create Impact Card', new_impact_card_path %>
+          </div>
+        <%- end %>
       </div>
     </div>
     <ul class="w-full divide-y divide-gray-200 dark:divide-gray-700">
