--- a/app/views/initiatives/index.html.erb
+++ b/app/views/initiatives/index.html.erb
@@ -5,9 +5,11 @@
       <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white">Initiatives</h1>
       <div class="flex justify-between items-center mt-4 ">
         <%= render partial: 'search_form', locals: { record: @q, placeholder: 'Search initiatives...' } %>
-        <div>
-          <%= link_to_primary 'Create Initiative', new_initiative_path %>
-        </div>
+        <%- if policy(Initiative).create? %>
+          <div>
+            <%= link_to_primary 'Create Initiative', new_initiative_path %>
+          </div>
+        <%- end %>
       </div>
     </div>
     <ul class="w-full divide-y divide-gray-200 dark:divide-gray-700">
