--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,9 +4,11 @@
       <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white">Team</h1>
       <div class="flex justify-between items-center mt-4 ">
         <%= render partial: 'search_form', locals: { record: @q, placeholder: 'Search team...', search_field: :name_or_email_cont } %>
-        <div>
-          <%= link_to_primary 'Invite Team Member', new_user_invitation_path %>
-        </div>
+        <%- if policy(User).invite?%>
+          <div>
+            <%= link_to_primary 'Invite Team Member', new_user_invitation_path %>
+          </div>
+        <% end %>
       </div>
     </div>
     <ul class="w-full divide-y divide-gray-200 dark:divide-gray-700">
