313 added support for changing passwords

--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -2,14 +2,14 @@
   <%= form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { class: 'space-y-6' }, data: { turbo: false }) do |f| %>
 
     <div>
-      <%= f.label :email, class: 'block text-sm font-medium text-gray-700' %>
+      <%= f.label :email, class: 'block text-sm font-medium text-gray-700 dark:text-gray-700' %>
       <div class="mt-1">
         <%= f.email_field :email, autofocus: true, autocomplete: "email", type: 'email', required: true, class: "block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-teal-500 focus:outline-none focus:ring-teal-500 sm:text-sm" %>
       </div>
     </div>
 
     <div>
-      <%= f.label :name, class: 'block text-sm font-medium text-gray-700' %>
+      <%= f.label :name, class: 'block text-sm font-medium text-gray-700 dark:text-gray-700' %>
       <div class="mt-1">
         <%= f.text_field :name, autocomplete: "name", required: true, class: "block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-teal-500 focus:outline-none focus:ring-teal-500 sm:text-sm" %>
       </div>
@@ -17,13 +17,13 @@
 
     <%- if policy(User).invite_with_system_role? %>
       <div>
-        <%= f.label :initial_system_role %>
+        <%= f.label :initial_system_role, class: 'block text-sm font-medium text-gray-700 dark:text-gray-700' %>
         <%= f.select :initial_system_role, options_for_select(User.system_roles.keys.map { |key| [key.capitalize, key]}, User.system_roles.keys.first) %>
       </div>
     <%- end %>
 
     <div>
-      <%= f.label :initial_account_role %>
+      <%= f.label :initial_account_role, class: 'block text-sm font-medium text-gray-700 dark:text-gray-700' %>
       <%= f.select :initial_account_role, options_for_select(AccountsUser.account_roles.keys.map { |key| [key.capitalize, key]}, AccountsUser.account_roles.keys.first) %>
     </div>
 
