--- a/app/views/layouts/_devise_page.html.erb
+++ b/app/views/layouts/_devise_page.html.erb
@@ -5,7 +5,7 @@
   </div>
 
   <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
-    <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+    <div class="bg-white dark:bg-black py-8 px-4 shadow sm:rounded-lg sm:px-10">
       <%= yield %>
     </div>
   </div>
