--- a/app/views/labels/index.html.erb
+++ b/app/views/labels/index.html.erb
@@ -4,13 +4,18 @@
       <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white"><%= label_klass.name.titleize.pluralize %></h1>
       <div class="flex justify-between items-center mt-4 ">
         <%= render partial: 'search_form', locals: { record: [:labels, @q], placeholder: "Search #{label_klass.name.titleize.downcase.pluralize}..." } %>
-        <%- if policy(label_klass).create? %>
-          <div>          
+        <div class="relative print:hidden">
+          <div class="flex justify-end items-center mb-4 space-x-2">         
             <%=
-              link_to_primary("Create #{label_klass.name.titleize}", new_polymorphic_path([:labels, label_klass]), data: { turbo_stream: true, action: 'click->labels#toggle' })
+              link_to_primary("Export", polymorphic_path([:labels, label_klass], format: :csv), data: { turbo_stream: false })
             %>
+            <%- if policy(label_klass).create? %>
+              <%=
+                link_to_primary("Create #{label_klass.name.titleize}", new_polymorphic_path([:labels, label_klass]), data: { turbo_stream: true, action: 'click->labels#toggle' })
+              %>
+            <%- end %>
           </div>
-        <%- end %>
+        </div>
       </div>
     </div>
 
